--- a/views/index.erb
+++ b/views/index.erb
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-                <title>XMMSinatra</title>
+                <title>Ravestation on Pong</title>
                 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
                 <link rel="stylesheet" type="text/css" href="style.css" />
                 <link rel="icon" type="image/png" href="/favicon.ico" />
         </head>
         <body>
                 <div id="header">
-                        <a href="http://github.com/ZaneA/XMMSinatra" target="_blank">XMMSinatra</a>
+                        <a href="http://github.com/eisnerd/XMMSinatra" target="_blank">Ravestation</a>
                 </div>
 
                 <div id="info">
@@ -51,7 +51,7 @@
                                                         $("#artist").html(data.artist);
                                                         $("#title").html(data.title.replace(/ \(.*?\)/, ''));
                                                         $("#album").html(data.album.replace(/ \(.*?\)/, ''));
-                                                        document.title = data.title + " - " + data.artist + " - XMMSinatra";
+                                                        document.title = data.title + " - " + data.artist + " is playing on pong";
                                                         updatePlaylist();
                                                 }
                                         });
